# axal

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CREDITS.md  Cargo.toml  README.md  ROADMAP.md  build.rs  build.sh
include/: axal.h
res/: launcher.icns
script/: build
src/: config.h.in  core.cpp  core.h  lib.rs  library.cpp  library.h  main.cpp  player.cpp  player.h  runtime.cpp  runtime.h  viewport.cpp  viewport.h  window.cpp  window.h
